# lumen-wallet

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/api/account/: route.ts
app/api/balance/: route.ts
app/api/fund/: route.ts
app/api/multisig/proposals/: route.ts
app/api/send/: route.ts
app/api/swap/: route.ts
app/api/swap/path/: route.ts
app/api/transactions/: route.ts
app/api/trustline/: route.ts
app/history/: page.tsx
app/multisig/: page.tsx
app/onboarding/: page.tsx
app/receive/: page.tsx
app/send/: page.tsx
app/swap/: page.tsx
app/tokens/: page.tsx
components/: app-shell.tsx  copy-button.tsx  logo.tsx  network-switcher.tsx  status-badge.tsx  theme-toggle.tsx  transaction-row.tsx  wallet-connection.tsx  wallet-provider.tsx
components/dashboard/: balance-card.tsx  recent-transactions.tsx
components/history/: history-list.tsx
components/landing/: auth-modal.tsx  features.tsx  hero.tsx  landing-shell.tsx  web3-animations.tsx  web3-background.tsx
components/multisig/: multisig-manager.tsx
components/onboarding/: key-field.tsx  onboarding.tsx
components/receive/: receive-card.tsx
components/send/: send-form.tsx
components/tokens/: token-action-dialog.tsx
contracts/: README.md
contracts/custom-token/: Cargo.toml
contracts/custom-token/src/: contract.rs  lib.rs  storage.rs  test.rs
lib/: multisig.ts  soroban-server.ts  soroban.ts  stellar-server.ts  stellar.ts
scripts/: deploy-token.mjs
(+3 files in other folders)
